Add git_config for using credential.helper

--- a/ansible/roles/tools/tasks/main.yaml
+++ b/ansible/roles/tools/tasks/main.yaml
@@ -63,4 +63,6 @@
       value: "{{username}}"
     - name: user.email
       value: "{{useremail}}"
+    - name: credential.helper
+      value: store
 
